--- a/scss/style.css
+++ b/scss/style.css
@@ -1221,12 +1221,14 @@ footer .pagsTexts .texts h5, footer .pagsTexts .redes h5 {
   display: inline;
 }
 
-.light .grupos-pag .grupos .search-groups input {
-  border: 0.6px solid #a1a1a1;
-}
-
 .light .grupos-pag .grupos .addNewGroup, .light .grupos-pag .grupos .grupoIMG {
   background-color: #f1f1f1;
+}
+
+.light .grupos-pag .grupos .cartel-opc-grupos, .light .grupos-pag .grupos .list-participants {
+  -webkit-box-shadow: 2px 2px 8px rgba(56, 56, 56, 0.137);
+          box-shadow: 2px 2px 8px rgba(56, 56, 56, 0.137);
+  background-color: white;
 }
 
 .light .grupos-pag .perfil svg:hover, .light .grupos-pag .perfil .nombreUsuario:hover {
@@ -1307,9 +1309,14 @@ footer .pagsTexts .texts h5, footer .pagsTexts .redes h5 {
   background-color: rgba(128, 128, 128, 0.377);
 }
 
-.dark .grupos-pag .grupos .search-groups input {
-  background-color: #1b1b1b;
-  border: 0.5px solid white;
+.dark .grupos-pag .grupos .cartel-opc-grupos, .dark .grupos-pag .grupos .list-participants {
+  -webkit-box-shadow: 0px 0px 8px rgba(255, 255, 255, 0.137);
+          box-shadow: 0px 0px 8px rgba(255, 255, 255, 0.137);
+  background-color: #2e2e2e;
+}
+
+.dark .grupos-pag .grupos .cartel-opc-grupos li, .dark .grupos-pag .grupos .list-participants li {
+  color: white;
 }
 
 .dark .grupos-pag .infoGroup .settings {
@@ -1321,7 +1328,7 @@ footer .pagsTexts .texts h5, footer .pagsTexts .redes h5 {
 }
 
 .dark .addGrupo .contentCrearGrupo {
-  background-color: #1b1b1b;
+  background-color: #181818;
 }
 
 .dark .addGrupo .contentCrearGrupo h3, .dark .addGrupo .contentCrearGrupo h6 {
@@ -1354,7 +1361,16 @@ footer .pagsTexts .texts h5, footer .pagsTexts .redes h5 {
 }
 
 #gruposBody .abierto {
-  display: inline-block;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
 }
 
 #gruposBody header {
@@ -1416,7 +1432,7 @@ footer .pagsTexts .texts h5, footer .pagsTexts .redes h5 {
 }
 
 #gruposBody header .perfil .perfil-options {
-  z-index: 3;
+  z-index: 100;
   position: absolute;
   top: 70px;
   right: 20px;
@@ -1455,37 +1471,39 @@ footer .pagsTexts .texts h5, footer .pagsTexts .redes h5 {
       grid-template-columns: 200px 80%;
 }
 
-#gruposBody .grupos-pag .grupos {
-  margin: 0px 10px 50px 80px;
-}
-
-#gruposBody .grupos-pag .grupos .search-groups {
+#gruposBody .grupos-pag .header-photo-options {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  height: auto;
+  padding: 20px 20px;
 }
 
-#gruposBody .grupos-pag .grupos .search-groups input {
-  padding: 0 10px;
-  border-radius: 5px;
-  outline: none;
-  width: 300px;
-  height: 40px;
+#gruposBody .grupos-pag .header-photo-options ul {
+  padding: 0px;
 }
 
-#gruposBody .grupos-pag .grupos .search-groups button {
-  border: none;
-  width: 30px;
-  height: 30px;
-  background: none;
+#gruposBody .grupos-pag .header-photo-options ul li {
+  cursor: pointer;
+  border-radius: 10px;
+  padding: 20px;
+  list-style: none;
+  font-weight: 500;
 }
 
-#gruposBody .grupos-pag .grupos .search-groups button:hover {
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
+#gruposBody .grupos-pag .header-photo-options ul li a {
+  text-decoration: none;
+}
+
+#gruposBody .grupos-pag .grupos {
+  margin: 0px 10px 50px 80px;
 }
 
 #gruposBody .grupos-pag .grupos #allGroups {
@@ -1531,19 +1549,71 @@ footer .pagsTexts .texts h5, footer .pagsTexts .redes h5 {
 }
 
 #gruposBody .grupos-pag .grupos #allGroups .grupoIMG {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
 }
 
-#gruposBody .grupos-pag .grupos #allGroups .grupoIMG svg {
+#gruposBody .grupos-pag .grupos #allGroups .grupoIMG div {
+  width: 100%;
+  height: 100%;
+  border-radius: 30px;
+}
+
+#gruposBody .grupos-pag .grupos #allGroups .grupoIMG div svg, #gruposBody .grupos-pag .grupos #allGroups .grupoIMG div button {
+  margin: 0 auto;
+}
+
+#gruposBody .grupos-pag .grupos #allGroups .grupoIMG .foto-perfil-grupo {
+  overflow: hidden;
+}
+
+#gruposBody .grupos-pag .grupos #allGroups .grupoIMG .foto-perfil-grupo svg {
   fill: #bebebe;
+}
+
+#gruposBody .grupos-pag .grupos #allGroups .grupoIMG .foto-perfil-grupo img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
+#gruposBody .grupos-pag .grupos #allGroups .grupoIMG .edit-group {
+  cursor: pointer;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  position: relative;
+  top: -200px;
+  background-color: rgba(0, 0, 0, 0.226);
+  opacity: 0%;
+  pointer-events: none;
+}
+
+#gruposBody .grupos-pag .grupos #allGroups .grupoIMG .edit-group button {
+  pointer-events: all;
+  background-color: #E04DB0;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  height: auto;
+  border: none;
+  border-radius: 50%;
+  padding: 9px;
+}
+
+#gruposBody .grupos-pag .grupos #allGroups .grupoIMG .edit-group button:hover {
+  -webkit-filter: contrast(150%);
+          filter: contrast(150%);
+}
+
+#gruposBody .grupos-pag .grupos #allGroups .grupoIMG .edit-group button svg {
+  pointer-events: none;
+  fill: white;
+}
+
+#gruposBody .grupos-pag .grupos #allGroups .grupoIMG:hover .edit-group {
+  opacity: 100%;
 }
 
 #gruposBody .grupos-pag .grupos #allGroups .grupoIMG, #gruposBody .grupos-pag .grupos #allGroups .addNewGroup {
@@ -1552,16 +1622,6 @@ footer .pagsTexts .texts h5, footer .pagsTexts .redes h5 {
   width: 200px;
   height: 200px;
   border-radius: 30px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
 }
@@ -1575,11 +1635,20 @@ footer .pagsTexts .texts h5, footer .pagsTexts .redes h5 {
           transform: translateY(-6px);
 }
 
-#gruposBody .grupos-pag .grupos .groupPhotos {
-  margin-top: 50px;
+#gruposBody .grupos-pag .grupos #allGroups .addNewGroup, #gruposBody .grupos-pag .grupos #allGroups .grupoIMG div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
-#gruposBody .grupos-pag .grupos .groupPhotos .infoGroup {
+#gruposBody .grupos-pag .grupos .group-photos-section .infoGroup {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1596,13 +1665,7 @@ footer .pagsTexts .texts h5, footer .pagsTexts .redes h5 {
   margin-bottom: 5px;
 }
 
-#gruposBody .grupos-pag .grupos .groupPhotos .infoGroup h6 {
-  font-size: 60px;
-  font-weight: 400;
-  margin-right: auto;
-}
-
-#gruposBody .grupos-pag .grupos .groupPhotos .infoGroup svg {
+#gruposBody .grupos-pag .grupos .group-photos-section .infoGroup svg {
   width: 23px;
   height: 23px;
   margin: 10px;
@@ -1611,28 +1674,53 @@ footer .pagsTexts .texts h5, footer .pagsTexts .redes h5 {
   cursor: pointer;
 }
 
-#gruposBody .grupos-pag .grupos .groupPhotos .infoGroup svg:hover {
+#gruposBody .grupos-pag .grupos .group-photos-section .infoGroup svg:hover {
   -webkit-transform: translateY(-2px);
           transform: translateY(-2px);
   -webkit-filter: brightness(150%);
           filter: brightness(150%);
 }
 
-#gruposBody .grupos-pag .grupos .groupPhotos .infoGroup .cartel-opc-grupos {
-  z-index: 10;
+#gruposBody .grupos-pag .grupos .group-photos-section .infoGroup svg path {
+  pointer-events: none;
+}
+
+#gruposBody .grupos-pag .grupos .group-photos-section .infoGroup .list-participants {
+  overflow-y: scroll;
+  width: auto;
+  max-height: 200px;
+  list-style: none;
+  padding: 0px;
+  position: absolute;
+  top: 170px;
+  border-radius: 10px;
+}
+
+#gruposBody .grupos-pag .grupos .group-photos-section .infoGroup .list-participants li {
+  padding: 5px;
+  width: 180px;
+  display: inline;
+  text-align: start;
+}
+
+#gruposBody .grupos-pag .grupos .group-photos-section .infoGroup .list-participants li:first-child {
+  font-weight: 700;
+  border-bottom: #d8d8d8 1px solid;
+}
+
+#gruposBody .grupos-pag .grupos .group-photos-section .infoGroup .cartel-opc-grupos {
   position: absolute;
   top: 170px;
   height: 100px;
-  -webkit-box-shadow: 2px 2px 8px rgba(56, 56, 56, 0.137);
-          box-shadow: 2px 2px 8px rgba(56, 56, 56, 0.137);
-  background-color: white;
+  border-radius: 10px;
 }
 
-#gruposBody .grupos-pag .grupos .groupPhotos .infoGroup .cartel-opc-grupos ul {
+#gruposBody .grupos-pag .grupos .group-photos-section .infoGroup .cartel-opc-grupos ul {
   padding: 0px;
 }
 
-#gruposBody .grupos-pag .grupos .groupPhotos .infoGroup .cartel-opc-grupos ul li {
+#gruposBody .grupos-pag .grupos .group-photos-section .infoGroup .cartel-opc-grupos ul li {
+  cursor: pointer;
   width: 150px;
   height: 50px;
   width: 150px;
@@ -1642,15 +1730,31 @@ footer .pagsTexts .texts h5, footer .pagsTexts .redes h5 {
   text-align: center;
 }
 
-#gruposBody .grupos-pag .grupos .groupPhotos .infoGroup .cartel-opc-grupos ul li:hover {
-  background-color: #f3f3f3;
+#gruposBody .grupos-pag .grupos .group-photos-section .infoGroup .cartel-opc-grupos ul li:hover {
+  background-color: rgba(243, 243, 243, 0.432);
 }
 
-#gruposBody .grupos-pag .grupos .groupPhotos .infoGroup .cartel-opc-grupos ul li:last-child {
-  color: red;
+#gruposBody .grupos-pag .grupos .group-photos-section .infoGroup .cartel-opc-grupos ul li:first-child {
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
 }
 
-#gruposBody .grupos-pag .grupos .groupPhotos .photos {
+#gruposBody .grupos-pag .grupos .group-photos-section .infoGroup .cartel-opc-grupos ul li:last-child {
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
+
+#gruposBody .grupos-pag .grupos .section-photos {
+  margin-top: 50px;
+}
+
+#gruposBody .grupos-pag .grupos .section-photos h6 {
+  font-size: 60px;
+  font-weight: 400;
+  margin-right: auto;
+}
+
+#gruposBody .grupos-pag .grupos .section-photos .photosCSS {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1665,17 +1769,17 @@ footer .pagsTexts .texts h5, footer .pagsTexts .redes h5 {
       flex-wrap: wrap;
 }
 
-#gruposBody .grupos-pag .grupos .groupPhotos .photos .IMG {
+#gruposBody .grupos-pag .grupos .section-photos .photosCSS .IMG {
   margin: 5px;
   height: 200px;
 }
 
-#gruposBody .grupos-pag .grupos .groupPhotos .photos .IMG img, #gruposBody .grupos-pag .grupos .groupPhotos .photos .IMG .hoverIMG {
+#gruposBody .grupos-pag .grupos .section-photos .photosCSS .IMG img, #gruposBody .grupos-pag .grupos .section-photos .photosCSS .IMG .hoverIMG {
   height: 100%;
   width: auto;
 }
 
-#gruposBody .grupos-pag .grupos .groupPhotos .photos .IMG .hoverIMG {
+#gruposBody .grupos-pag .grupos .section-photos .photosCSS .IMG .hoverIMG {
   position: relative;
   top: -200px;
   -webkit-transition: 0.3s all  ease;
@@ -1693,44 +1797,75 @@ footer .pagsTexts .texts h5, footer .pagsTexts .redes h5 {
           justify-content: space-between;
 }
 
-#gruposBody .grupos-pag .grupos .groupPhotos .photos .IMG .hoverIMG .person-uploaded {
-  color: white !important;
-  padding: 5px;
+#gruposBody .grupos-pag .grupos .section-photos .photosCSS .IMG .hoverIMG .option-image {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: auto 5px 5px 0;
 }
 
-#gruposBody .grupos-pag .grupos .groupPhotos .photos .IMG .hoverIMG .heart {
+#gruposBody .grupos-pag .grupos .section-photos .photosCSS .IMG .hoverIMG .option-image .eliminar-imagen {
+  position: absolute;
+  right: 30px;
+}
+
+#gruposBody .grupos-pag .grupos .section-photos .photosCSS .IMG .hoverIMG .option-image .eliminar-imagen:hover {
+  -webkit-transform: scale(0.9);
+          transform: scale(0.9);
+}
+
+#gruposBody .grupos-pag .grupos .section-photos .photosCSS .IMG .hoverIMG .option-image .heart {
+  margin-left: 4px;
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
   height: 20px;
-  margin: auto 5px 5px 0;
+  cursor: pointer;
 }
 
-#gruposBody .grupos-pag .grupos .groupPhotos .photos .IMG .hoverIMG .heart svg {
+#gruposBody .grupos-pag .grupos .section-photos .photosCSS .IMG .hoverIMG .option-image .heart svg {
+  pointer-events: none;
+}
+
+#gruposBody .grupos-pag .grupos .section-photos .photosCSS .IMG .hoverIMG .option-image .heart:hover svg {
+  -webkit-transform: scale(0.9);
+          transform: scale(0.9);
+}
+
+#gruposBody .grupos-pag .grupos .section-photos .photosCSS .IMG .hoverIMG svg {
   width: 20px;
   height: 20px;
   fill: white;
   -webkit-transition: all 0.2s ease;
   transition: all 0.2s ease;
+  cursor: pointer;
+}
+
+#gruposBody .grupos-pag .grupos .section-photos .photosCSS .IMG .hoverIMG svg path {
   pointer-events: none;
 }
 
-#gruposBody .grupos-pag .grupos .groupPhotos .photos .IMG .hoverIMG .heart svg path {
-  pointer-events: none;
-}
-
-#gruposBody .grupos-pag .grupos .groupPhotos .photos .IMG .hoverIMG .heart:hover svg {
-  -webkit-transform: scale(0.9);
-          transform: scale(0.9);
-}
-
-#gruposBody .grupos-pag .grupos .groupPhotos .photos .IMG:hover .hoverIMG {
+#gruposBody .grupos-pag .grupos .section-photos .photosCSS .IMG:hover .hoverIMG {
   background: -webkit-gradient(linear, left top, left bottom, from(#4e4e4ea1), to(#9198e500));
   background: linear-gradient(#4e4e4ea1, #9198e500);
   opacity: 100%;
 }
 
-#gruposBody .grupos-pag .header-photo-options {
+#gruposBody .grupos-pag .grupos .section-photos .photosCSS .IMG .person-uploaded {
+  color: white !important;
+  padding: 5px;
+}
+
+#gruposBody .editGrupo .content-edit {
+  width: 400px;
+  height: 350px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1738,26 +1873,74 @@ footer .pagsTexts .texts h5, footer .pagsTexts .redes h5 {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  height: auto;
-  padding: 20px 20px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border-radius: 20px;
+  overflow-y: scroll;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-#gruposBody .grupos-pag .header-photo-options ul {
-  padding: 0px;
+#gruposBody .editGrupo .content-edit .img-of-group .new-file-group {
+  height: 160px;
+  opacity: 0%;
 }
 
-#gruposBody .grupos-pag .header-photo-options ul li {
-  border-radius: 10px;
-  padding: 20px;
-  list-style: none;
-  font-weight: 500;
+#gruposBody .editGrupo .content-edit .img-of-group .new-img-group {
+  width: 250px;
+  height: 160px;
+  border: 0.5px solid #969696;
+  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
-#gruposBody .grupos-pag .header-photo-options ul li a {
-  text-decoration: none;
+#gruposBody .editGrupo .content-edit .img-of-group .new-img-group img {
+  width: 100%;
+  height: inherit;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+#gruposBody .editGrupo .content-edit .img-of-group .new-img-group svg {
+  margin: auto;
+  fill: lightgray;
+}
+
+#gruposBody .editGrupo .content-edit .img-of-group:hover .new-img-group {
+  background-color: rgba(78, 78, 78, 0.144);
+}
+
+#gruposBody .editGrupo .content-edit input, #gruposBody .editGrupo .content-edit button {
+  margin: 10px auto;
+  border: 0.5px solid #969696;
+  width: 250px;
+  height: 30px;
+  padding: 5px;
+  color: #000000;
+  outline: none;
+}
+
+#gruposBody .editGrupo .content-edit #enviar-cambios-grupo {
+  -webkit-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+  background-color: #1c57d3;
+  color: white;
+  border: 1px solid #1c57d3;
+}
+
+#gruposBody .editGrupo .content-edit #enviar-cambios-grupo:hover {
+  background: none;
+  color: #1c57d3;
 }
 
 #gruposBody .shareGroupId-bg div {
@@ -1788,6 +1971,7 @@ footer .pagsTexts .texts h5, footer .pagsTexts .redes h5 {
 }
 
 #gruposBody .extraBoxes {
+  z-index: 0;
   background-color: #5e5e5e48;
   position: fixed;
   width: 100%;
@@ -2030,6 +2214,8 @@ footer .pagsTexts .texts h5, footer .pagsTexts .redes h5 {
   background-color: #0400ff57;
   position: relative;
   top: -200px;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 
 #gruposBody .account-settings .perfilImg .change-icon-div svg {
@@ -2074,6 +2260,8 @@ footer .pagsTexts .texts h5, footer .pagsTexts .redes h5 {
 
 #gruposBody .account-settings label #enviar-cambios {
   margin-top: 20px;
+  -webkit-transition: all 0.4s ease;
+  transition: all 0.4s ease;
   background-color: #1c57d3;
   color: white;
   border: 1px solid #1c57d3;
@@ -2090,5 +2278,12 @@ footer .pagsTexts .texts h5, footer .pagsTexts .redes h5 {
 
 .displayNone {
   display: none !important;
+}
+
+.toastify {
+  -webkit-box-shadow: none !important;
+          box-shadow: none !important;
+  border-radius: 10px !important;
+  font-size: 12px;
 }
 /*# sourceMappingURL=style.css.map */
